--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-dom": "^17.0.2",
     "react-onclickoutside": "^6.12.1",
     "react-scripts": "5.0.0",
+    "react-use-scroll-position": "^2.0.0",
     "sass": "^1.45.0",
+    "swiper": "^7.4.1",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
