--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "ityped": "^1.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-onclickoutside": "^6.12.1",
     "react-scripts": "5.0.0",
+    "react-spring": "^9.4.2",
     "react-use-scroll-position": "^2.0.0",
     "sass": "^1.45.0",
+    "styled-components": "^4.4.1",
     "swiper": "^7.4.1",
     "web-vitals": "^2.1.2"
   },
