--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "dotenv": "^10.0.0",
     "ityped": "^1.0.3",
     "react": "^17.0.2",
+    "react-click-outside-hook": "^1.1.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-onclickoutside": "^6.12.1",
     "react-scripts": "5.0.0",
+    "react-scroll": "^1.8.4",
+    "react-select": "^5.2.2",
     "react-spring": "^9.4.2",
     "react-use-scroll-position": "^2.0.0",
     "sass": "^1.45.0",
