--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^17.0.2",
     "react-click-outside-hook": "^1.1.1",
     "react-dom": "^17.0.2",
+    "react-dropdown": "^1.9.2",
     "react-icons": "^4.3.1",
     "react-onclickoutside": "^6.12.1",
     "react-scripts": "5.0.0",
@@ -51,5 +52,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://api.yourworld20.com/api"
+  "proxy": "https://api.yworld3.com/api"
 }
