--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-dropdown": "^1.9.2",
     "react-icons": "^4.3.1",
     "react-onclickoutside": "^6.12.1",
+    "react-query": "^3.34.16",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.4",
     "react-select": "^5.2.2",
