--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-select": "^5.2.2",
     "react-spring": "^9.4.2",
     "react-use-scroll-position": "^2.0.0",
+    "reactjs-popup": "^2.0.5",
     "sass": "^1.45.0",
     "styled-components": "^4.4.1",
     "swiper": "^7.4.1",
