--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "autoheight-textarea": "^1.0.3",
     "axios": "^0.24.0",
     "dotenv": "^10.0.0",
+    "html-react-parser": "^1.4.8",
     "ityped": "^1.0.3",
     "react": "^17.0.2",
     "react-click-outside-hook": "^1.1.1",
